--- a/examples/ExampleConfig.hpp.in
+++ b/examples/ExampleConfig.hpp.in
@@ -1,5 +1,5 @@
 // ////////////////////////////////////////////////////////////
-// Vulkan Graphics Classes
+// Graphics Library Classes Vulkan
 // Copyright (c) 2018. All rights reserved.
 // ////////////////////////////////////////////////////////////
 #pragma once
