Move ci vulkan download to script

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,14 +50,7 @@ install:
   ############################################################################
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      cd ${DEPS_DIR}
-      VULKAN_VERSION=1.1.77.0
-      VULKAN_TAR_FILE="vulkansdk-linux-x86_64-$VULKAN_VERSION.tar.gz"
-      VULKAN_URL="https://vulkan.lunarg.com/sdk/download/$VULKAN_VERSION/linux/$VULKAN_TAR_FILE"
-      mkdir vulkan \
-      && travis_retry wget --no-check-certificate --quiet -O - ${VULKAN_URL} \
-      | tar --strip-components=1 -xz -C vulkan
-      export VULKAN_SDK=${DEPS_DIR}/vulkan/x86_64
+      . ${TRAVIS_BUILD_DIR}/.ci/download_vulkan.sh ${DEPS_DIR}
     fi
 
 script:
