--- a/.travis.yml
+++ b/.travis.yml
@@ -7,27 +7,40 @@ branches:
 dist: trusty
 
 matrix:
-  include:
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-            - mesa-utils
-            - xorg-dev
-            - libx11-xcb-dev
-            - libxkbcommon-dev
-            - libmirclient-dev
-            - libwayland-dev
-            - libxrandr-dev
-            - lcov
+#  include:
+#    - os: linux
+#      addons:
+#        apt:
+#          sources:
+#            - ubuntu-toolchain-r-test
+#          packages:
+#            - g++-7
+#            - mesa-utils
+#            - xorg-dev
+#            - libx11-xcb-dev
+#            - libxkbcommon-dev
+#            - libmirclient-dev
+#            - libwayland-dev
+#            - libxrandr-dev
+#            - lcov
+#      env:
+#        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+    - os: osx
+      osx_image: xcode8
       env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
 
 before_install:
   - eval "${MATRIX_EVAL}"
+
+  ############################################################################
+  # Update OS X homebrew
+  ############################################################################
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
+      brew update
+    fi
 
 install:
   ############################################################################
@@ -42,6 +55,8 @@ install:
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
       . ${TRAVIS_BUILD_DIR}/.ci/download_cmake.sh ${DEPS_DIR}
+    else
+      brew outdated cmake || brew upgrade cmake
     fi
   - cmake --version
 
