--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,9 +19,6 @@ matrix:
 
 platform: x64
 
-environment:
-  VULKAN_SDK: c:\VulkanSDK\1.1.77.0
-
 cache:
   - c:\VulkanSDK
 
@@ -49,9 +46,10 @@ install:
   ############################################################################
   # Install Vulkan
   ############################################################################
-  - curl --silent --show-error --output VulkanSDK.exe https://vulkan.lunarg.com/sdk/download/1.1.77.0/windows/VulkanSDK-1.1.77.0-Installer.exe
+  - set VULKAN_URL="https://vulkan.lunarg.com/sdk/download/1.1.77.0/windows/VulkanSDK-1.1.77.0-Installer.exe"
+  - appveyor DownloadFile %VULKAN_URL% -FileName VulkanSDK.exe
   - .\VulkanSDK.exe
-  - set VULKAN_SDK=C:\VulkanSDK\1.1.77.0
+  - set VULKAN_SDK=c:\VulkanSDK\1.1.77.0
 
 before_build:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
