Update ci links

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -46,7 +46,7 @@ install:
   ############################################################################
   # Install Vulkan
   ############################################################################
-  - set VULKAN_URL="https://vulkan.lunarg.com/sdk/download/1.1.77.0/windows/VulkanSDK-1.1.77.0-Installer.exe"
+  - set VULKAN_URL="https://sdk.lunarg.com/sdk/download/1.1.77.0/windows/VulkanSDK-1.1.77.0-Installer.exe?Human=true;u="
   - appveyor DownloadFile %VULKAN_URL% -FileName VulkanSDK.exe
   - .\VulkanSDK.exe /S
   - set VULKAN_SDK=c:\VulkanSDK\1.1.77.0
