Export vulkan variables in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,11 @@ install:
       . ${TRAVIS_BUILD_DIR}/.ci/download_vulkan_mac.sh ${DEPS_DIR}
     fi
 
+  - echo $VULKAN_SDK
+  - export PATH=$VULKAN_SDK/bin:$PATH
+  - export LD_LIBRARY_PATH=$VULKAN_SDK/lib:$LD_LIBRARY_PATH
+  - export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
+
 script:
   ############################################################################
   # Build project and run CPU based tests
